--- a/Gestion_Ticketing/css/style.css
+++ b/Gestion_Ticketing/css/style.css
@@ -92,6 +92,7 @@ header {
 
 .grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
 .grid-2 { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
+.grid-4 { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; }
 
 /* --- Components: Tables --- */
 table { width: 100%; border-collapse: collapse; margin-top: 10px; background: #fff; }
@@ -144,7 +145,7 @@ button:hover, .btn:hover { background-color: #2980b9; }
     aside.sidebar { width: 100%; height: auto; position: relative; }
     main.content { margin-left: 0; width: 100%; padding: 15px; } /* Marges réduites */
     
-    .grid-3, .grid-2 { grid-template-columns: 1fr; }
+    .grid-4, .grid-3, .grid-2 { grid-template-columns: 1fr; }
 
     /* 2. Transformation du TABLEAU en CARTES */
     
